--- a/src/input.css
+++ b/src/input.css
@@ -28,6 +28,8 @@
 
 body {
   font-family: "Bebas Neue", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .test {
@@ -45,4 +47,53 @@ body {
 /* Hide mega menu by default */
 #mega-menu.hidden {
   display: none;
+}
+
+.radial-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    circle at 50% 0%,
+    #eb641e,
+    rgba(255, 255, 255, 0) 70%
+  );
+  z-index: -1 !important;
+}
+
+.radial-bg {
+  filter: blur(8px);
+}
+
+.background-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: -1 !important;
+  background-size: 400% 400%;
+  animation: gradientShift 30s ease infinite;
+}
+
+.hero-vid {
+  z-index: -1 !important;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@keyframes gradientShift {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
