update index.html, output.css and input.css

--- a/src/input.css
+++ b/src/input.css
@@ -166,3 +166,14 @@ body {
 }
 
 /* clients */
+
+.clip-pentagon {
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% calc(100% - 50px),
+    calc(100% - 80px) 100%,
+    0 100%,
+    0 0
+  );
+}
